--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <html>
 	<head>
 		<title>MC-云泉</title>
+		<link rel="shortcut icon" href="images/favicon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-			<section id="header">
+		<section id="header">
 				<div class="inner">
 					<h1>你好，欢迎来到<strong>MC云泉服务器</strong>的官网<br />
 					这是我们的 <a href="https://qm.qq.com/q/HKAXFqRr6c">QQ群聊</a>，里面有友好温馨的服务器玩家们.</h1>
 					<p>所以来玩服务器的你也要与其他玩家友好相处哦.</p>
 					<ul class="actions special">
-						<li><a href="#233" class="button scrolly">下潜</a></li>
+						<li><a href="#233" class="button scrolly">深入了解</a></li>
 					</ul>
 				</div>
 			</section>
@@ -34,7 +35,6 @@
 				</div>
 			</section>
 
-
 			<section id="one" class="main style1">
 				<div class="container">
 					<div class="row gtr-150">
@@ -50,7 +50,6 @@
 					</div>
 				</div>
 			</section>
-
 
 		<section id="1145" class="main style1">
 				<div class="container">
@@ -83,7 +82,7 @@
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Prosperity1693的基地</h3>
+							<h3>Prosperity1693和Mofa_Cat的家</h3>
 							<ul class="actions special">
 							</ul>
 						</div>
@@ -96,7 +95,6 @@
 					</div>
 				</div>
 			</section>
-
 
 			<section id="four" class="main style2 special">
 				<div class="container">
@@ -111,7 +109,6 @@
 				</div>
 			</section>
 				
-		
 			<section id="footer">
 				
 				<ul class="copyright">
