--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<header class="major">
 						<h2>服务器简介</h2>
 					</header>
-					<p>云泉服务器成立于2024年6月，是新生代的基岩Java互通生存插件服务器，兼容基岩版1.20.80+和Java版1.7.x~1.21.x所有版本</p>
+					<p>云泉服务器成立于2024年6月，是新生代的基岩Java互通生存插件服务器，兼容基岩版1.20.40~1.20.81和Java版1.7.x~1.21.x所有版本，服务器群内还有专门的整合包！</p>
 					<p>
 						<li>服务器的主打玩法为经济与生电，拥有几乎全部的Java版特性，你可以在服务器里开发自己的智慧，建造高效的生电机械</li>
 						<li>服务器安装了许多有趣的插件，如商店与领地等，更有史诗地形数据包，变革了原版的MC体验，地图探索奖励也变得丰厚了</li>
